// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner - no icon 1`] = `
<div
  className=" css-1w3gvwd-StyledBanner eyaavg40"
>
  <div
    className="css-1ctbztb-StyledTopic eyaavg42"
  >
    Comprehensive API documentation for developers and businesses.
  </div>
  <div
    className=" css-qmg3be-StyledDescription eyaavg43"
  >
    Step-by-step instructions to get you set up in the Dwolla API
  </div>
</div>
`;

exports[`Banner - with Button 1`] = `
<div
  className=" css-1w3gvwd-StyledBanner eyaavg40"
>
  <div
    className="css-1ctbztb-StyledTopic eyaavg42"
  >
    Comprehensive API documentation for developers and businesses.
  </div>
  <div
    className=" css-qmg3be-StyledDescription eyaavg43"
  >
    Step-by-step instructions to get you set up in the Dwolla API
  </div>
  <a
    className="primary large css-qnxw47-StyledLink-buttonStyles-buttonStyles e12ysvgk1"
    href="https://accounts-sandbox.dwolla.com/login"
    onClick={[Function]}
    onMouseEnter={[Function]}
    target="_blank"
  >
    Discover the Possibilities
  </a>
</div>
`;

exports[`Banner - with Filters 1`] = `
<div
  className="filters css-1w3gvwd-StyledBanner eyaavg40"
>
  <img
    alt=""
    className="css-wrcaoo-StyledIcon eyaavg41"
    src="test-image-stub"
  />
  <div
    className="css-1ctbztb-StyledTopic eyaavg42"
  >
    Guides
  </div>
  <div
    className="filters css-qmg3be-StyledDescription eyaavg43"
  >
    Step-by-step instructions to get you set up in the Dwolla API
  </div>
  <div
    className="css-5t23wi-StyledFilter eyaavg44"
  >
    <div>
      <div
        className="css-18c9go6-TabsContainerStyle efq5uj30"
      >
        <div
          className="tab is-active css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          ALL
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          GET BUILDING
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          PREREQUISITES
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          FEATURES
        </div>
      </div>
      <div
        className="css-n6mzzn-SelectWrapper efq5uj32"
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-1xxipdn-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-86rg1c-ValueContainer"
            >
              <div
                className=" css-1me8bqy-singleValue"
              >
                ALL
              </div>
              <input
                aria-autocomplete="list"
                className="css-62g3xt-dummyInput"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                tabIndex="0"
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-unjupu-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <img
                  alt=""
                  className=" css-vfym8x-StyledDefaultDropdownIcon e1oqaitj0"
                  src="test-image-stub"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default Banner 1`] = `
<div
  className=" css-1w3gvwd-StyledBanner eyaavg40"
>
  <img
    alt=""
    className="css-wrcaoo-StyledIcon eyaavg41"
    src="test-image-stub"
  />
  <div
    className="css-1ctbztb-StyledTopic eyaavg42"
  >
    Guides
  </div>
  <div
    className=" css-qmg3be-StyledDescription eyaavg43"
  >
    Step-by-step instructions to get you set up in the Dwolla API
  </div>
</div>
`;
